# proptech-semantic-search

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: health.py  ingest.py  search.py
app/core/: config.py  cost.py  logging.py  metrics.py
app/models/: search.py
app/services/: llm.py  qdrant_client.py
docs/adr/: 001-llm-provider-ollama.md  002-multi-provider-llm.md
evals/: queries.yaml  queries_subset.labeled.yaml  queries_subset.yaml  run_eval.py
evals/results/: 2026-04-21_09-25-57.md  2026-04-21_10-00-36.md  2026-04-21_10-15-02.md  2026-04-21_10-15-25.md  2026-04-21_10-57-13.md  2026-04-21_10-59-16.md  2026-04-21_11-45-43.md  2026-04-21_11-48-00.md  2026-04-21_11-52-19.md  2026-04-21_12-01-40.md  2026-04-21_12-26-56.md
prometheus/: prometheus.yml
scripts/: ingest_hf.py  label_queries.py
