[project]
name = "proptech-semantic-search"
version = "0.1.0"
description = "Lifestyle-based real estate semantic search — demo for Spacenplace"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ed Dubnitsky", email = "dubnitsky@gmail.com" }]
license = { text = "MIT" }

dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Vector DB + cache
    "qdrant-client>=1.12",
    "redis>=5.2",
    # Observability
    "prometheus-client>=0.21",
    "structlog>=24.4",
    # Reliability
    "tenacity>=9.0",
    # CLI + data
    "typer>=0.13",
    "pyyaml>=6.0",
    "rich>=13.9",
    # Cost tracking (token counters)
    "tiktoken>=0.8",
]

[project.optional-dependencies]
ml = [
    # ML stack — installed on demand to keep base lean
    "torch>=2.5",
    "transformers>=4.46",
    "sentence-transformers>=3.3",
    "Pillow>=11.0",
    "ultralytics>=8.3",      # YOLOv8
    "datasets>=3.1",          # HuggingFace datasets loader
    "pandas>=2.2",
]

dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",            # for TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
